--- a/lodms-ods-transformers/dcat-valuemapper/pom.xml
+++ b/lodms-ods-transformers/dcat-valuemapper/pom.xml
@@ -88,10 +88,9 @@
 
     <repositories>
         <repository>
-            <id>tenforce_archiva_external_free</id>
-            <url>http://archiva.tenforce.com/archiva/repository/external_free/</url>
-        </repository>
-        <repository>
+            <id>linkeddata</id>
+            <url>http://mvn.linkeddata.org/content/groups/public/</url>
+        </repository>        <repository>
             <id>com.springsource.repository.bundles.release</id>
             <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
             <url>http://repository.springsource.com/maven/bundles/release</url>
