--- a/lodms-ods-extractors/dcat-protocol-extractor/pom.xml
+++ b/lodms-ods-extractors/dcat-protocol-extractor/pom.xml
@@ -27,6 +27,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.tenforce.lodms</groupId>
+            <artifactId>ods-vocabulary</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
             <groupId>at.punkt.lodms</groupId>
             <artifactId>lodms-spi</artifactId>
             <version>${lodms.version}</version>
@@ -65,6 +70,11 @@
                     <artifactId>log4j</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-model</artifactId>
+            <version>${sesame.version}</version>
         </dependency>
     </dependencies>
 
